@@ -1,100 +1,103 @@
 package org.alliancegenome.core.translators.tdf;
 
+import org.alliancegenome.api.entity.AllelePhenotypeAnnotationDocument;
+import org.alliancegenome.api.entity.GenePhenotypeAnnotationDocument;
+import org.alliancegenome.api.entity.PhenotypeAnnotationDocument;
+import org.alliancegenome.curation_api.model.entities.AGMPhenotypeAnnotation;
+import org.alliancegenome.curation_api.model.entities.PhenotypeAnnotation;
+import org.apache.commons.collections.CollectionUtils;
+
 import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import org.alliancegenome.neo4j.entity.PhenotypeAnnotation;
-import org.alliancegenome.neo4j.entity.PrimaryAnnotatedEntity;
-import org.alliancegenome.neo4j.entity.node.Gene;
-import org.alliancegenome.neo4j.entity.node.GeneticEntity;
-import org.alliancegenome.neo4j.entity.node.PublicationJoin;
-import org.apache.commons.collections.CollectionUtils;
-
 public class PhenotypeAnnotationToTdfTranslator {
 
-	public String getAllRows(List<PhenotypeAnnotation> annotations) {
-		denormalizeAnnotations(annotations);
+	public String getAllRows(List<? extends PhenotypeAnnotationDocument> annotations) {
+		//denormalizeAnnotations(annotations);
 
 		// convert collection of PhenotypeAnnotation records to PhenotypeDownloadRow records
 		List<PhenotypeDownloadRow> list = getDownloadRowsFromAnnotations(annotations);
 
 		List<DownloadHeader> headers = List.of(
-				new DownloadHeader<>("Phenotype", PhenotypeDownloadRow::getPhenotype),
-				new DownloadHeader<>("Genetic Entity ID", PhenotypeDownloadRow::getGeneticEntityID),
-				new DownloadHeader<>("Genetic Entity Name", PhenotypeDownloadRow::getGeneticEntityName),
-				new DownloadHeader<>("Genetic Entity Type", PhenotypeDownloadRow::getGeneticEntityType),
-				new DownloadHeader<>("Source", PhenotypeDownloadRow::getSource),
-				new DownloadHeader<>("Reference", PhenotypeDownloadRow::getReference)
+			new DownloadHeader<>("Phenotype", PhenotypeDownloadRow::getPhenotype),
+			new DownloadHeader<>("Genetic Entity ID", PhenotypeDownloadRow::getGeneticEntityID),
+			new DownloadHeader<>("Genetic Entity Name", PhenotypeDownloadRow::getGeneticEntityName),
+			new DownloadHeader<>("Genetic Entity Type", PhenotypeDownloadRow::getGeneticEntityType),
+			new DownloadHeader<>("Source", PhenotypeDownloadRow::getSource),
+			new DownloadHeader<>("Reference", PhenotypeDownloadRow::getReference)
 		);
 
 		return DownloadHeader.getDownloadOutput(list, headers);
 	}
 
 
-	public String getAllRowsForAlleles(List<PhenotypeAnnotation> annotations) {
-		denormalizeAnnotations(annotations);
+	public String getAllRowsForAlleles(List<AllelePhenotypeAnnotationDocument>  annotations) {
+		List<PhenotypeDownloadRow> list = getDownloadRowsFromAnnotations(annotations);
 
 		// convert collection of PhenotypeAnnotation records to PhenotypeDownloadRow records
+/*
 		List<PhenotypeDownloadRow> list = annotations.stream()
-				.map(annotation -> annotation.getPrimaryAnnotatedEntities().stream()
-						.map(entity -> entity.getPublicationEvidenceCodes().stream()
-								.map(join -> {
-									PhenotypeDownloadRow row = getBaseDownloadRow(annotation, join, null);
-									//set entities
-									row.setMainEntityID(annotation.getAllele().getPrimaryKey());
-									row.setMainEntitySymbol(annotation.getAllele().getSymbolText());
-									if (!entity.getType().equals(GeneticEntity.CrossReferenceType.GENE)) {
-										row.setGeneticEntityID(entity.getId());
-										row.setGeneticEntityName(entity.getDisplayName());
-										row.setGeneticEntityType(entity.getType());
-									}
+			.map(annotation -> annotation.getPrimaryAnnotatedEntities().stream()
+				.map(entity -> entity.getPublicationEvidenceCodes().stream()
+					.map(join -> {
+						PhenotypeDownloadRow row = getBaseDownloadRow(annotation, join, null);
+						//set entities
+						row.setMainEntityID(annotation.getAllele().getPrimaryKey());
+						row.setMainEntitySymbol(annotation.getAllele().getSymbolText());
+						if (!entity.getType().equals(GeneticEntity.CrossReferenceType.GENE)) {
+							row.setGeneticEntityID(entity.getId());
+							row.setGeneticEntityName(entity.getDisplayName());
+							row.setGeneticEntityType(entity.getType());
+						}
 
-									return row;
-								})
-								.collect(Collectors.toList()))
-						.flatMap(Collection::stream)
-						.collect(Collectors.toList()))
+						return row;
+					})
+					.collect(Collectors.toList()))
 				.flatMap(Collection::stream)
-				.collect(Collectors.toList());
+				.collect(Collectors.toList()))
+			.flatMap(Collection::stream)
+			.collect(Collectors.toList());
+*/
 
 		List<DownloadHeader> headers = List.of(
-				new DownloadHeader<>("Phenotype", PhenotypeDownloadRow::getPhenotype),
-				new DownloadHeader<>("Genetic Entity ID", PhenotypeDownloadRow::getGeneticEntityID),
-				new DownloadHeader<>("Genetic Entity Name", PhenotypeDownloadRow::getGeneticEntityName),
-				new DownloadHeader<>("Genetic Entity Type", PhenotypeDownloadRow::getGeneticEntityType),
-				new DownloadHeader<>("Reference", PhenotypeDownloadRow::getReference),
-				new DownloadHeader<>("Source", PhenotypeDownloadRow::getSource)
+			new DownloadHeader<>("Phenotype", PhenotypeDownloadRow::getPhenotype),
+			new DownloadHeader<>("Genetic Entity ID", PhenotypeDownloadRow::getGeneticEntityID),
+			new DownloadHeader<>("Genetic Entity Name", PhenotypeDownloadRow::getGeneticEntityName),
+			new DownloadHeader<>("Genetic Entity Type", PhenotypeDownloadRow::getGeneticEntityType),
+			new DownloadHeader<>("Reference", PhenotypeDownloadRow::getReference),
+			new DownloadHeader<>("Source", PhenotypeDownloadRow::getSource)
 		);
 
-		return DownloadHeader.getDownloadOutput(list, headers);
+		//return DownloadHeader.getDownloadOutput(list, headers);
+		return null;
 	}
-
 
 
 	private void denormalizeAnnotations(List<PhenotypeAnnotation> phenotypeAnnotation) {
 		// add genetic entity info for annotations with pure genes
 
-		
-		
+/*
 		phenotypeAnnotation.stream()
-				.filter(annotation -> CollectionUtils.isEmpty(annotation.getPrimaryAnnotatedEntities()))
-				.forEach(annotation -> {
-					PrimaryAnnotatedEntity entity = createNewPrimaryAnnotatedEntity(annotation, null);
-					annotation.addPrimaryAnnotatedEntity(entity);
-					List<PublicationJoin> joins = annotation.getPublications().stream()
-							.map(publication -> {
-								PublicationJoin join = new PublicationJoin();
-								join.setPublication(publication);
-								return join;
-							})
-							.collect(Collectors.toList());
-					entity.addPublicationEvidenceCode(joins);
-				});
+			.filter(annotation -> CollectionUtils.isEmpty(annotation.getPrimaryAnnotatedEntities()))
+			.forEach(annotation -> {
+				PrimaryAnnotatedEntity entity = createNewPrimaryAnnotatedEntity(annotation, null);
+				annotation.addPrimaryAnnotatedEntity(entity);
+				List<PublicationJoin> joins = annotation.getPublications().stream()
+					.map(publication -> {
+						PublicationJoin join = new PublicationJoin();
+						join.setPublication(publication);
+						return join;
+					})
+					.collect(Collectors.toList());
+				entity.addPublicationEvidenceCode(joins);
+			});
+*/
 
 
 	}
 
+/*
 	private PrimaryAnnotatedEntity createNewPrimaryAnnotatedEntity(PhenotypeAnnotation annotation, PublicationJoin join) {
 		PrimaryAnnotatedEntity entity = new PrimaryAnnotatedEntity();
 		if (annotation.getGene() != null) {
@@ -106,51 +109,39 @@ public class PhenotypeAnnotationToTdfTranslator {
 			entity.setName(annotation.getAllele().getSymbolText());
 			entity.setType(GeneticEntity.CrossReferenceType.ALLELE.getDisplayName());
 		}
-		
+
 		return entity;
 	}
+*/
 
 
-	public List<PhenotypeDownloadRow> getDownloadRowsFromAnnotations(List<PhenotypeAnnotation> phenotypeAnnotations) {
-		denormalizeAnnotations(phenotypeAnnotations);
+	public List<PhenotypeDownloadRow> getDownloadRowsFromAnnotations(List<? extends PhenotypeAnnotationDocument> phenotypeAnnotations) {
+		//denormalizeAnnotations(phenotypeAnnotations);
 		return phenotypeAnnotations.stream()
-				.filter(annotation -> annotation.getPrimaryAnnotatedEntities() != null)
-				.filter(annotation -> !CollectionUtils.isEmpty(annotation.getPrimaryAnnotatedEntities()))
-				.map(annotation -> annotation.getPrimaryAnnotatedEntities().stream()
-						.map(entity -> entity.getPublicationEvidenceCodes().stream()
-								.map(join -> {
-
-									return List.of(getPhenotypeDownloadRow(annotation, entity, join, null));
-								})
-								.flatMap(Collection::stream)
-								.collect(Collectors.toList()))
-						.flatMap(Collection::stream)
-						.collect(Collectors.toList()))
-				.flatMap(Collection::stream)
-				.collect(Collectors.toList());
+			.filter(annotation -> CollectionUtils.isNotEmpty(annotation.getPrimaryAnnotations()))
+			.map(annotation -> annotation.getPrimaryAnnotations().stream()
+				.map(this::getPhenotypeDownloadRow).toList()).flatMap(Collection::stream).collect(Collectors.toList());
 	}
 
-	private PhenotypeDownloadRow getPhenotypeDownloadRow(PhenotypeAnnotation annotation, PrimaryAnnotatedEntity entity, PublicationJoin join, Gene homologousGene) {
-		PhenotypeDownloadRow row = getBaseDownloadRow(annotation, join, homologousGene);
+	private PhenotypeDownloadRow getPhenotypeDownloadRow(PhenotypeAnnotation annotation) {
+		PhenotypeDownloadRow row = getBaseDownloadRow(annotation);
 
-		row.setPhenotype(annotation.getPhenotype());
-		row.setReference(join.getPublication().getPubId());
-		if (entity != null) {
-			row.setGeneticEntityID(entity.getId());
-			row.setGeneticEntityName(entity.getDisplayName());
-			row.setGeneticEntityType(entity.getType());
-
+		row.setPhenotype(annotation.getPhenotypeAnnotationObject());
+		if (annotation instanceof AGMPhenotypeAnnotation annot) {
+			row.setGeneticEntityID(annot.getPhenotypeAnnotationSubject().getPrimaryExternalId());
+			row.setGeneticEntityName(annot.getPhenotypeAnnotationSubject().getName());
+			row.setGeneticEntityType(annot.getPhenotypeAnnotationSubject().getSubtype().getName());
 		}
 		return row;
 	}
 
-	private PhenotypeDownloadRow getBaseDownloadRow(PhenotypeAnnotation annotation, PublicationJoin join, Gene homologousGene) {
+	private PhenotypeDownloadRow getBaseDownloadRow(PhenotypeAnnotation annotation) {
 		PhenotypeDownloadRow row = new PhenotypeDownloadRow();
-		row.setPhenotype(annotation.getPhenotype());
+		row.setPhenotype(annotation.getPhenotypeAnnotationObject());
 
-		row.setReference(join.getPublication().getPubId());
-		if (annotation.getSource() != null) {
-			row.setSource(annotation.getSource().getName());
+		row.setReference(annotation.getSingleReference().getReferenceID());
+		if (annotation.getDataProviderString() != null) {
+			row.setSource(annotation.getDataProviderString());
 		} else {
 			row.setSource("");
 		}
